import React from 'react'

import { render } from '@testing-library/react'

import { authenticatorData } from '../../../../../../fixtures/authenticatorData'
import { recoveryCodes as recoveryCodesFixture } from '../../../../../../fixtures/recoveryCodes'
import ModalStep from '../ModalStep'

jest.mock('../ModalSteps/AppSetupStep/AppSetupStep', () => () => (
    <div>App Setup step mocked</div>
))

jest.mock('../ModalSteps/QRCodeStep/QRCodeStep', () => () => (
    <div>QRCode step mocked</div>
))

jest.mock(
    '../ModalSteps/ValidateVerificationCodeStep/ValidateVerificationCodeStep',
    () => () => <div>Validate Verification Code step mocked</div>,
)

jest.mock('../ModalSteps/RecoveryCodesStep/RecoveryCodesStep', () => () => (
    <div>Validate Verification Code step mocked</div>
))

describe('<ModalStep />', () => {
    describe('render()', () => {
        it.each([1, 2, 3, 999999])(
            'should render the appropriate step',
            (currentStep) => {
                const { container } = render(
                    <ModalStep
                        authenticatorData={authenticatorData}
                        currentStep={currentStep}
                        errorText={''}
                        setErrorText={jest.fn()}
                        setVerificationCode={jest.fn()}
                        setIsLoading={jest.fn()}
                        recoveryCodes={recoveryCodesFixture}
                        setIsRecoveryCodesSaved={jest.fn()}
                    />,
                )

                expect(container.firstChild).toMatchSnapshot()
            },
        )
    })
})
