// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalStep /> render() should render the appropriate step 1`] = `
<div>
  App Setup step mocked
</div>
`;

exports[`<ModalStep /> render() should render the appropriate step 2`] = `
<div>
  QRCode step mocked
</div>
`;

exports[`<ModalStep /> render() should render the appropriate step 3`] = `
<div>
  Validate Verification Code step mocked
</div>
`;

exports[`<ModalStep /> render() should render the appropriate step 4`] = `null`;
